Change GitHub page

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: i@leeroy.im
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: LeeroyDing
   instagram:
   linkedin: https://www.linkedin.com/in/leeroy-ding-0a774140/
   pinterest:
